--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,11 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "http-interop/http-factory-guzzle": "^1.2",
         "laravel/framework": "^10.0",
-        "laravel/tinker": "^2.8"
+        "laravel/scout": "^10.2",
+        "laravel/tinker": "^2.8",
+        "meilisearch/meilisearch-php": "^1.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
