--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "laravel-mix": "^6.0.49",
         "laravel-mix-purgecss": "^6.0.0",
         "meilisearch": "^0.33.0",
-        "vue": "^2.6.12"
+        "vue": "^2.6.12",
+        "vue-router": "^4.2.4"
     }
 }
